--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 
 
 <h1 id="grants-2024-election-blog">Grant&rsquo;s 2024 Election Blog</h1>
+<div style="text-align: center;">
+  <img src="/images/grantphoto.jpg" alt="Grant" style="border-radius: 50%; width: 200px; height: 200px;">
+</div>
 <h2 id="_harris-versus-trump_"><em>Harris versus Trump</em></h2>
 <p>Each week between September 9th and November 5th, the date of the 2024 election, I will be fine tuning a statistical model to predict the outcome of the presidential election. The details of each model can be found in the bulleted list below.</p>
 
